==> phoenix-rtos/phoenix-rtos-kernel/src/hal/armv7/stm32.c <==
#include "stm32.h"
#include "interrupts.h"
#include "pmap.h"
#include "../../../include/errno.h"

int hal_platformctl(void *ptr)
{
	platformctl_t *data = ptr;
	int ret = -EINVAL;

	hal_spinlockSet(&stm32_common.pltctlSp);

	switch (data->type) {
	case pctl_devclk:
		if (data->action == pctl_set)
			ret = _stm32_rccSetDevClock(data->devclk.dev, data->devclk.state);
		else if (data->action == pctl_get)
			ret = _stm32_rccGetDevClock(data->devclk.dev, &data->devclk.state);

		break;
	case pctl_cpuclk:
		if (data->action == pctl_set) {
			ret = _stm32_rccSetCPUClock(data->cpuclk.hz);
			_stm32_systickInit(1000);
		}
		else if (data->action == pctl_get) {
			data->cpuclk.hz = _stm32_rccGetCPUClock();
			ret = EOK;
		}

		break;
	case pctl_reboot:
		if (data->action == pctl_set) {
			if (data->reboot.magic == PCTL_REBOOT_MAGIC)
				_stm32_nvicSystemReset();
		}
		else if (data->action == pctl_get) {
			data->reboot.reason = stm32_common.resetFlags;
		}
	}

	hal_spinlockClear(&stm32_common.pltctlSp);

	return ret;
}

void _stm32_platformInit(void)
{
	hal_spinlockCreate(&stm32_common.pltctlSp, "pltctl");
}

void _stm32_scbSetPriorityGrouping(u32 group)
{
	u32 t;

	/* Get register value and clear bits to set */
	t = *(stm32_common.scb + scb_aircr) & ~0xffff0700;

	/* Store new value */
	*(stm32_common.scb + scb_aircr) = t | 0x5fa0000 | ((group & 7) << 8);
}

u32 _stm32_scbGetPriorityGrouping(void)
{
	return (*(stm32_common.scb + scb_aircr) & 0x700) >> 8;
}

void _stm32_scbSetPriority(s8 excpn, u32 priority)
{
	volatile u8 *ptr;

	ptr = &((u8*)(stm32_common.scb + scb_shp0))[excpn - 4];

	*ptr = (priority << 4) & 0x0ff;
}

u32 _stm32_scbGetPriority(s8 excpn)
{
	volatile u8 *ptr;

	ptr = &((u8*)(stm32_common.scb + scb_shp0))[excpn - 4];

	return *ptr >> 4;
}

void _stm32_nvicSetIRQ(s8 irqn, u8 state)
{
	volatile u32 *ptr = stm32_common.nvic + ((u8)irqn >> 5) + (state ? nvic_iser: nvic_icer);
	*ptr |= 1 << (irqn & 0x1F);
}

u32 _stm32_nvicGetPendingIRQ(s8 irqn)
{
	volatile u32 *ptr = stm32_common.nvic + ((u8)irqn >> 5) + nvic_ispr;
	return !!(*ptr & (1 << (irqn & 0x1F)));
}

void _stm32_nvicSetPendingIRQ(s8 irqn, u8 state)
{
	volatile u32 *ptr = stm32_common.nvic + ((u8)irqn >> 5) + (state ? nvic_ispr: nvic_icpr);
	*ptr |= 1 << (irqn & 0x1F);
}

u32 _stm32_nvicGetActive(s8 irqn)
{
	volatile u32 *ptr = stm32_common.nvic + ((u8)irqn >> 5) + nvic_iabr;
	return !!(*ptr & (1 << (irqn & 0x1F)));
}

void _stm32_nvicSetPriority(s8 irqn, u32 priority)
{
	volatile u8 *ptr;

	ptr = ((u8*)(stm32_common.nvic + nvic_ip)) + irqn;

	*ptr = (priority << 4) & 0x0ff;
}

u8 _stm32_nvicGetPriority(s8 irqn)
{
	volatile u8 *ptr;

	ptr = ((u8*)(stm32_common.nvic + nvic_ip)) + irqn;

	return *ptr >> 4;
}

void _stm32_nvicSystemReset(void)
{
	*(stm32_common.scb + scb_aircr) = ((0x5fa << 16) | (*(stm32_common.scb + scb_aircr) & (0x700)) | (1 << 0x02));

	__asm__ volatile ("dsb");

	for(;;);
}

int _stm32_systickInit(u32 interval)
{
	u64 load = ((u64) interval * stm32_common.cpuclk) / 1000000;
	if (load > 0x00ffffff)
		return -EINVAL;

	*(stm32_common.stk + stk_load) = (u32) load;
	*(stm32_common.stk + stk_ctrl) = 0x7;

	return EOK;
}

void _stm32_systickSet(u8 state)
{
	*(stm32_common.stk + stk_ctrl) &= ~(!state);
	*(stm32_common.stk + stk_ctrl) |= !!state;
}

u32 _stm32_systickGet(void)
{
	u32 cb;

	cb = ((*(stm32_common.stk + stk_load) - *(stm32_common.stk + stk_val)) * 1000) / *(stm32_common.stk + stk_load);

	/* Add 1000 us if there's systick pending */
	if (*(stm32_common.scb + scb_icsr) & (1 << 26))
		cb += 1000;

	return cb;
}

unsigned int _stm32_cpuid(void)
{
	return *(stm32_common.scb + scb_cpuid);
}

void _stm32_init(void)
{
	u32 t, i;
	static const int gpio2pctl[] = { pctl_gpioa, pctl_gpiob, pctl_gpioc,
		pctl_gpiod, pctl_gpioe, pctl_gpiof, pctl_gpiog, pctl_gpioh };

	/* Base addresses init */
	stm32_common.rcc = (void *)0x40023800;
	stm32_common.pwr = (void *)0x40007000;
	stm32_common.scb = (void *)0xe000ed00;
	stm32_common.rtc = (void *)0x40002800;
	stm32_common.nvic = (void *)0xe000e100;
	stm32_common.exti = (void *)0x40010400;
	stm32_common.stk = (void *)0xe000e010;
	stm32_common.mpu = (void *)0xe000ed90;
	stm32_common.syscfg = (void *)0x40010000;
	stm32_common.iwdg = (void *)0x40003000;
	stm32_common.gpio[0] = (void *)0x40020000; /* GPIOA */
	stm32_common.gpio[1] = (void *)0x40020400; /* GPIOB */
	stm32_common.gpio[2] = (void *)0x40020800; /* GPIOC */
	stm32_common.gpio[3] = (void *)0x40020c00; /* GPIOD */
	stm32_common.gpio[4] = (void *)0x40021000; /* GPIOE */
	stm32_common.gpio[5] = (void *)0x40021800; /* GPIOF */
	stm32_common.gpio[6] = (void *)0x40021c00; /* GPIOG */
	stm32_common.gpio[7] = (void *)0x40021400; /* GPIOH */

	/* Init HSI & MSI refcount */
	stm32_common.hsi = 0;
	stm32_common.msi = 0;

	/* Store reset flags and then clean them */
	_stm32_rtcUnlockRegs();
	stm32_common.resetFlags = (*(stm32_common.rcc + rcc_csr) >> 26);
	*(stm32_common.rcc + rcc_csr) |= 1 << 24;
	_stm32_rtcLockRegs();

	/* Fundamental system init */
	_stm32_rccSetCPUClock(2 * 2097152); /* 4,2 MHz */

	/* Set buses divider to 1 */
	*(stm32_common.rcc + rcc_cfgr) = 0x8802c000;

	hal_cpuDataBarrier();

	/* Enable System configuration controller */
	_stm32_rccSetDevClock(pctl_syscfg, 1);

	/* Enable power module */
	_stm32_rccSetDevClock(pctl_pwr, 1);

	/* Disable all interrupts */
	*(stm32_common.rcc + rcc_cir) = 0;

	hal_cpuDataBarrier();

	/* Rescue */
	_stm32_rccSetDevClock(pctl_gpiob, 1);
	_stm32_gpioConfig(pctl_gpiob, 8, 0, 0, 0, 0, 1);
	u8 val;
	_stm32_gpioGet(pctl_gpiob, 8, &val);

	while (!val)
		_stm32_gpioGet(pctl_gpiob, 8, &val);

	_stm32_rccSetDevClock(pctl_gpiob, 0);

	/* GPIO LP init */
#ifdef NDEBUG
	i = 0;
#else
	/* Don't change setting for debug pins (needed for JTAG) */
	/* Turn off for production to reduce power consumption */
	_stm32_rccSetDevClock(pctl_gpioa, 1);
	*(stm32_common.gpio[0] + gpio_moder) = 0xabffffff;
	_stm32_rccSetDevClock(pctl_gpioa, 0);
	_stm32_rccSetDevClock(pctl_gpiob, 1);
	*(stm32_common.gpio[1] + gpio_moder) = 0xfffffebf;
	_stm32_rccSetDevClock(pctl_gpiob, 0);

	/* Enable debug in stop mode */
	*((u32*)0xE0042004) |= 3;

	i = 2;
#endif

	/* Init all GPIOs to Ain mode to lower power consumption */
	for (; i <= pctl_gpiog - pctl_gpioa; ++i) {
		_stm32_rccSetDevClock(gpio2pctl[i], 1);
		*(stm32_common.gpio[i] + gpio_moder) = 0xffffffff;
		*(stm32_common.gpio[i] + gpio_pupdr) = 0;
		_stm32_rccSetDevClock(gpio2pctl[i], 0);
	}

	/* Set the internal regulator output voltage to 1.5V */
	_stm32_pwrSetCPUVolt(2);

	/* Set DBP bit */
	*(stm32_common.pwr + pwr_cr) |= 1 << 8;

	/* Enable LSE clock source */
	*(stm32_common.rcc + rcc_csr) |= 1 << 8;

	hal_cpuDataBarrier();

	/* And wait for it to turn on */
	while (!(*(stm32_common.rcc + rcc_csr) & (1 << 9)));

	/* Initialize RTC */

	/* Select LSE as clock source for RTC and LCD */
	*(stm32_common.rcc + rcc_csr) |= 1 << 16;

	hal_cpuDataBarrier();

	/* Clear DBP bit */
	*(stm32_common.pwr + pwr_cr) |= 1 << 8;

	/* Unlock RTC */
	_stm32_rtcUnlockRegs();

	/* Turn on RTC */
	_stm32_rccSetDevClock(pctl_rtc, 1);

	/* Set INIT bit */
	*(stm32_common.rtc + rtc_isr) |= 1 << 7;
	while (!(*(stm32_common.rtc + rtc_isr) & (1 << 6)));

	/* Set RTC prescaler (it has to be done this way) */
	t = *(stm32_common.rtc + rtc_prer) & ~(0x7f << 16);
	*(stm32_common.rtc + rtc_prer) = t | (0x7f << 16);
	t = *(stm32_common.rtc + rtc_prer) & ~0x7fff;
	*(stm32_common.rtc + rtc_prer) = t | 0xff;

	/* Reset RTC interrupt bits WUTIE & WUTE */
	*(stm32_common.rtc + rtc_cr) &= ~((1 << 14) | (1 << 10));

	/* Turn on shadow register bypass */
	*(stm32_common.rtc + rtc_cr) |= 1 << 5;

	/* Select RTC/16 wakeup clock */
	*(stm32_common.rtc + rtc_cr) &= ~0x7;

	/* Clear INIT bit */
	*(stm32_common.rtc + rtc_isr) &= ~(1 << 7);
	_stm32_rtcLockRegs();

	/* Clear pending interrupts */
	*(stm32_common.exti + exti_pr) |= 0xffffff;

#if defined(WATCHDOG) && defined(NDEBUG)
	/* Init watchdog */
	/* Enable write access to IWDG */
	*(stm32_common.iwdg + iwdg_kr) = 0x5555;

	/* Set prescaler to 256, ~30s interval */
	*(stm32_common.iwdg + iwdg_pr) = 0x06;
	*(stm32_common.iwdg + iwdg_rlr) = 0xfff;

	_stm32_wdgReload();

	/* Enable watchdog */
	*(stm32_common.iwdg + iwdg_kr) = 0xcccc;
#endif

	return;
}
