==> phoenix-rtos/phoenix-rtos-kernel/src/hal/armv7/imxrt1170.c <==
#include "imxrt1170.h"
#include "interrupts.h"
#include "pmap.h"
#include "../../../include/errno.h"
#include "../../../include/arch/imxrt1170.h"

unsigned int _imxrt_cpuid(void)
{
	return *(imxrt_common.scb + scb_cpuid);
}

void _imxrt_scbSetPriorityGrouping(u32 group)
{
	u32 t;

	/* Get register value and clear bits to set */
	t = *(imxrt_common.scb + scb_aircr) & ~0xffff0700;

	/* Store new value */
	*(imxrt_common.scb + scb_aircr) = t | 0x5fa0000 | ((group & 7) << 8);
}

u32 _imxrt_scbGetPriorityGrouping(void)
{
	return (*(imxrt_common.scb + scb_aircr) & 0x700) >> 8;
}

void _imxrt_scbSetPriority(s8 excpn, u32 priority)
{
	volatile u8 *ptr;

	ptr = &((u8*)(imxrt_common.scb + scb_shp0))[excpn - 4];

	*ptr = (priority << 4) & 0x0ff;
}

u32 _imxrt_scbGetPriority(s8 excpn)
{
	volatile u8 *ptr;

	ptr = &((u8*)(imxrt_common.scb + scb_shp0))[excpn - 4];

	return *ptr >> 4;
}

void _imxrt_nvicSetIRQ(s8 irqn, u8 state)
{
	volatile u32 *ptr = imxrt_common.nvic + ((u8)irqn >> 5) + (state ? nvic_iser: nvic_icer);
	*ptr |= 1 << (irqn & 0x1F);
}

u32 _imxrt_nvicGetPendingIRQ(s8 irqn)
{
	volatile u32 *ptr = imxrt_common.nvic + ((u8)irqn >> 5) + nvic_ispr;
	return !!(*ptr & (1 << (irqn & 0x1F)));
}

void _imxrt_nvicSetPendingIRQ(s8 irqn, u8 state)
{
	volatile u32 *ptr = imxrt_common.nvic + ((u8)irqn >> 5) + (state ? nvic_ispr: nvic_icpr);
	*ptr |= 1 << (irqn & 0x1F);
}

u32 _imxrt_nvicGetActive(s8 irqn)
{
	volatile u32 *ptr = imxrt_common.nvic + ((u8)irqn >> 5) + nvic_iabr;
	return !!(*ptr & (1 << (irqn & 0x1F)));
}

void _imxrt_nvicSetPriority(s8 irqn, u32 priority)
{
	volatile u8 *ptr;

	ptr = (u8*)(imxrt_common.nvic + irqn + nvic_ip);

	*ptr = (priority << 4) & 0x0ff;
}

u8 _imxrt_nvicGetPriority(s8 irqn)
{
	volatile u8 *ptr;

	ptr = (u8*)(imxrt_common.nvic + irqn + nvic_ip);

	return *ptr >> 4;
}

void _imxrt_nvicSystemReset(void)
{
	*(imxrt_common.scb + scb_aircr) = ((0x5fa << 16) | (*(imxrt_common.scb + scb_aircr) & (0x700)) | (1 << 0x02));

	__asm__ volatile ("dsb");

	for(;;);
}

int _imxrt_systickInit(u32 interval)
{
	u64 load = ((u64) interval * imxrt_common.cpuclk) / 1000000;
	if (load > 0x00ffffff)
		return -EINVAL;

	*(imxrt_common.stk + stk_load) = (u32)load;
	*(imxrt_common.stk + stk_ctrl) = 0x7;

	return EOK;
}

void _imxrt_systickSet(u8 state)
{
	*(imxrt_common.stk + stk_ctrl) &= ~(!state);
	*(imxrt_common.stk + stk_ctrl) |= !!state;
}

u32 _imxrt_systickGet(void)
{
	u32 cb;

	cb = ((*(imxrt_common.stk + stk_load) - *(imxrt_common.stk + stk_val)) * 1000) / *(imxrt_common.stk + stk_load);

	/* Add 1000 us if there's systick pending */
	if (*(imxrt_common.scb + scb_icsr) & (1 << 26))
		cb += 1000;

	return cb;
}

int hal_platformctl(void *ptr)
{
	platformctl_t *data = ptr;
	int ret = -EINVAL;
	spinlock_ctx_t sc;

	hal_spinlockSet(&imxrt_common.pltctlSp, &sc);

	switch (data->type) {
/*
	case pctl_devclock:
		if (data->action == pctl_set)
			ret = _imxrt_setDevClock(data->devclock.dev, data->devclock.state);
		else if (data->action == pctl_get)
			ret = _imxrt_getDevClock(data->devclock.dev, &data->devclock.state);
		break;
*/
/*
	case pctl_iogpr:
		if (data->action == pctl_set)
			ret = _imxrt_setIOgpr(data->iogpr.field, data->iogpr.val);
		else if (data->action == pctl_get)
			ret = _imxrt_getIOgpr(data->iogpr.field, &data->iogpr.val);
		break;
*/
	case pctl_iomux:
		if (data->action == pctl_set)
			ret = _imxrt_setIOmux(data->iomux.mux, data->iomux.sion, data->iomux.mode);
		else if (data->action == pctl_get)
			ret = _imxrt_getIOmux(data->iomux.mux, &data->iomux.sion, &data->iomux.mode);
		break;

	case pctl_iopad:
		if (data->action == pctl_set)
			ret = _imxrt_setIOpad(data->iopad.pad, data->iopad.sre, data->iopad.dse, data->iopad.pue,
				data->iopad.pus, data->iopad.ode, data->iopad.apc);
		else if (data->action == pctl_get)
			ret = _imxrt_getIOpad(data->iopad.pad, &data->iopad.sre, &data->iopad.dse, &data->iopad.pue,
				&data->iopad.pus, &data->iopad.ode, &data->iopad.apc);
		break;

	case pctl_ioisel:
		if (data->action == pctl_set)
			ret = _imxrt_setIOisel(data->ioisel.isel, data->ioisel.daisy);
		else if (data->action == pctl_get)
			ret = _imxrt_getIOisel(data->ioisel.isel, &data->ioisel.daisy);
		break;

	case pctl_reboot:
		if (data->action == pctl_set) {
			if (data->reboot.magic == PCTL_REBOOT_MAGIC)
				_imxrt_reboot();
		}
		else if (data->action == pctl_get) {
			data->reboot.reason = imxrt_common.resetFlags;
			ret = EOK;
		}
		break;

	default:
		break;
	}

	hal_spinlockClear(&imxrt_common.pltctlSp, &sc);

	return ret;
}

void _imxrt_platformInit(void)
{
	hal_spinlockCreate(&imxrt_common.pltctlSp, "pltctlSp");
}

void _imxrt_init(void)
{
	int i;

	imxrt_common.aips[0] = (void *)0x40000000;
	imxrt_common.aips[1] = (void *)0x40400000;
	imxrt_common.aips[2] = (void *)0x40800000;
	imxrt_common.aips[3] = (void *)0x40c00000;
	imxrt_common.nvic = (void *)0xe000e100;
	imxrt_common.scb = (void *)0xe000ed00;
	imxrt_common.stk = (void *)0xe000e010;
	imxrt_common.wdog1 = (void *)0x40030000;
	imxrt_common.wdog2 = (void *)0x40034000;
	imxrt_common.wdog3 = (void *)0x40038000;
	imxrt_common.src = (void *)0x40c04000;
	imxrt_common.iomux_snvs = (void *)0x40c94000;
	imxrt_common.iomux_lpsr = (void *)0x40c08000;
	imxrt_common.iomuxc = (void *)0x400e8000;

	imxrt_common.cpuclk = 640000000;

	/* Store reset flags and then clean them */
	imxrt_common.resetFlags = *(imxrt_common.src + src_srsr) & 0x1f;
	*(imxrt_common.src + src_srsr) |= 0x1f;

	/* Disable watchdogs */
	if (*(imxrt_common.wdog1 + wdog_wcr) & (1 << 2))
		*(imxrt_common.wdog1 + wdog_wcr) &= ~(1 << 2);
	if (*(imxrt_common.wdog2 + wdog_wcr) & (1 << 2))
		*(imxrt_common.wdog2 + wdog_wcr) &= ~(1 << 2);

	*(imxrt_common.wdog3 + rtwdog_cnt) = 0xd928c520; /* Update key */
	*(imxrt_common.wdog3 + rtwdog_total) = 0xffff;
	*(imxrt_common.wdog3 + rtwdog_cs) |= 1 << 5;
	*(imxrt_common.wdog3 + rtwdog_cs) &= ~(1 << 7);

	/* Disable Systick which might be enabled by bootrom */
	if (*(imxrt_common.stk + stk_ctrl) & 1)
		*(imxrt_common.stk + stk_ctrl) &= ~1;

	/* Configure cache */
	_imxrt_enableDCache();
	_imxrt_enableICache();

	/* Allow userspace applications to access hardware registers */
/*
	for (i = 0; i < sizeof(imxrt_common.aips) / sizeof(imxrt_common.aips[0]); ++i) {
		*(imxrt_common.aips[i] + aipstz_opacr) &= ~0x44444444;
		*(imxrt_common.aips[i] + aipstz_opacr1) &= ~0x44444444;
		*(imxrt_common.aips[i] + aipstz_opacr2) &= ~0x44444444;
		*(imxrt_common.aips[i] + aipstz_opacr3) &= ~0x44444444;
		*(imxrt_common.aips[i] + aipstz_opacr4) &= ~0x44444444;
	}
*/
}
